@@ -2,8 +2,7 @@ package org.example.model;
 
 import org.example.model.enums.ROLE;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -16,9 +15,38 @@ public class User {
     private String email;
     private String password;
     private double wallet;
-    private Membership membreship;
+    private Membership membership;
     private List<EntryLog> entrylogs;
     private List<Reservation> reservations;
+
+    @Override
+    public String toString() {
+        StringBuilder sb = new StringBuilder();
+        sb.append("User Details:\n");
+        sb.append("ID: ").append(id).append("\n");
+        sb.append("Name: ").append(name).append("\n");
+        sb.append("Email: ").append(email).append("\n");
+        sb.append("Wallet Balance: ").append(wallet).append("\n");
+        sb.append("Membership: ").append(membership != null ? membership.toString() : "No Membership").append("\n");
+        if (entrylogs != null && !entrylogs.isEmpty()) {
+            sb.append("Entry Logs: ").append(entrylogs.size()).append(" entries\n");
+            for (EntryLog log : entrylogs) {
+                sb.append("\t").append(log.toString()).append("\n");
+            }
+        } else {
+            sb.append("Entry Logs: No entries\n");
+        }
+        if (reservations != null && !reservations.isEmpty()) {
+            sb.append("Reservations: ").append(reservations.size()).append(" reservations\n");
+            for (Reservation reservation : reservations) {
+                sb.append("\t").append(reservation.toString()).append("\n");
+            }
+        } else {
+            sb.append("Reservations: No reservations\n");
+        }
+        return sb.toString();
+    }
+
 
     public String getName() {
         return name;
@@ -37,7 +65,7 @@ public class User {
     }
 
     public Membership getMembreship() {
-        return membreship;
+        return membership;
     }
 
     public ROLE getRole() {
@@ -59,7 +87,7 @@ public class User {
     }
 
     public void setMembreship(Membership membreship) {
-        this.membreship = membreship;
+        this.membership = membreship;
     }
 
     public User(String name, String password, String email , ROLE role) {
@@ -67,24 +95,20 @@ public class User {
         this.name = name;
         this.email = email;
         this.password = password;
-        this.membreship = null;
-        this.entrylogs = List.of();
-        this.reservations = List.of();
+        this.membership = null;
+        this.entrylogs = new ArrayList<>();
+        this.reservations = new ArrayList<>();
         this.role = role;
     }
 
     public void reserveSession(GroupSession session) {
         reservations.add(new Reservation(this,session));
     }
-    public void cancelReservation(GroupSession session){
+    public void cancelReservation(GroupSession session) {
         Optional<Reservation> reservationOpt = reservations.stream()
-                .filter(r -> r.getGroupSession().equals(session))
+                .filter(r -> r.getGroupSession().getId().equals(session.getId()))
                 .findFirst();
-        if (reservationOpt.isPresent()){
-            reservations.remove(reservationOpt.get());
-        }else{
-            System.out.println("No such reservation");
-        }
+        reservationOpt.ifPresent(reservation -> reservations.remove(reservation));
     }
     public EntryLog logEntry() {
         EntryLog log = new EntryLog(
@@ -94,10 +118,13 @@ public class User {
         return log;
     }
     public void logExit() {
-        EntryLog log = this.entrylogs.getLast();
-        log.setExitTime();
-        this.entrylogs.removeLast();
-        this.entrylogs.add(log);
+        if (!entrylogs.isEmpty()) {
+            EntryLog log = entrylogs.get(entrylogs.size() - 1);
+            log.setExitTime();
+            this.entrylogs.set(entrylogs.size() - 1, log);
+        } else {
+            System.out.println("No entry log found for this user.");
+        }
     }
     public boolean checkMembershipStatus() {
         if (getMembreship() == null){
